<resources>
    <string name="app_name">AndroidClass</string>
    <string name="button1">button 1</string>
    <string name="button2">button 2</string>
    <string name="button3">button 3</string>
    <string name="button4">button 4</string>
    <string name="button5">button 5</string>
    <string name="button6">button 6</string>
    <string name="button7">button 7</string>
    <string name="button8">button 8</string>
    <string name="button9">button 9</string>
    <string name="button10">button 10</string>
    <string name="android_practice">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="github">Github</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password?</string>
    <string name="or_connect_with">or connect with</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="add_contact">add_contact</string>
    <string name="pick_contact">pick_contact</string>
    <string name="fragment">fragment</string>
    <string name="change" translatable="false">change</string>
    <string name="android" translatable="false">Android</string>
    <string name="java" translatable="false">Java</string>
    <string name="android_context" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="java_context" translatable="false">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
</resources>