<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="60dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/android_practice"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gray"
                android:onClick="onLoginBTNClick"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:onClick="onAddContactBTNClick"
                android:text="@string/add_contact"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/pick_contact"
                android:textAllCaps="false"
                android:onClick="onPickContactBTNClick"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="10dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/fragment"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:onClick="onFragmentBTNClick"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button5"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button6"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button7"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button8"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button9"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button10"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>