<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="113.1dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/aware"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="62.5dp"
        android:layout_marginTop="196dp"
        android:autofillHints="@string/username"
        android:background="@drawable/edit_text_border"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:textColor="#e4e4e4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="62.5dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password"
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textColor="#e4e4e4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_username" />

</androidx.constraintlayout.widget.ConstraintLayout>